# SafinaDB

./: .gitignore  NOW  NOW.txt  README.md  help.html  index.html  search-index.js  settings.html  src-files.js
.github/workflows/: check.yml  rust.yml
benchamrks/delete 1000 keys/base/: sample.json  tukey.json
benchamrks/delete 1000 keys/new/: estimates.json
benchamrks/delete 1000 keys/report/: index.html
benchamrks/get 1000 keys/base/: benchmark.json  estimates.json  sample.json
benchamrks/get 1000 keys/new/: tukey.json
benchamrks/get 1000 keys/report/: index.html
benchamrks/insert 1000 keys/base/: estimates.json  tukey.json
benchamrks/report/: index.html
documentation/: all.html  crates.js  help.html  search-index.js  settings.html  sidebar-items.js  src-files.js  static.STORE.html  static.STORE_MUTEX.html
documentation/cli/: fn.readline.html  fn.respond.html  fn.run.html  sidebar-items.js
documentation/kv_store/: struct.KV.html  struct.Store.html
documentation/safina_db/: all.html  fn.main.html  index.html  sidebar-items.js  static.STORAGE_MUTEX.html  static.STORE.html
documentation/storage/: index.html  struct.Storage.html
roadmaps/: version1.md
safina_db/: .gitignore  Cargo.toml  Makefile  fn.main.html  index.html
safina_db/benches/: store_benchmark.rs
safina_db/cli/: fn.cli.html  index.html
safina_db/kv_store/: sidebar-items.js  struct.KV.html
safina_db/src/: cli.rs  kv_store.rs  lib.rs  main.rs  storage.rs
safina_db/tests/: store_test.rs
src/safina_db/: cli.rs.html  kv_store.rs.html  lib.rs.html  main.rs.html  storage.rs.html
(+53 files in other folders)
