[package]
name = "safina_db"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
once_cell = "1.19.0"
regex = "1.10.4"
shlex = "1.3.0"


[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "store_benchmark"
harness = false
